--- a/index.html
+++ b/index.html
@@ -30,14 +30,6 @@
     .default-thumbnail {
       height: 124px;
     }
-
-    .video-play-icon {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-    }
   </style>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -459,23 +451,28 @@
     </button>
     <ul class="dropdown-menu" aria-labelledby="albumMenu">
       <li>
+        <a class="dropdown-item album-menu" href="#" onclick="switchPath('1YVu9fL7bqQ4c8CkcyIt93idVnScq-K2x')">
+          20221113-町田夢舞生ッスイ祭 2022
+        </a>
+      </li>
+      <li>
         <a class="dropdown-item album-menu" href="#" onclick="switchPath('1ytzgYQc_SBp-PRTmbwb24PXJ9pWRMHL5')">
-          20221015-yokohama-yosakoi
+          20221015-横浜よさこい祭り 2022
         </a>
       </li>
       <li>
         <a class="dropdown-item album-menu" href="#" onclick="switchPath('1yrIXKE-5XKQOe7_pmLduVFynqpk_z68i')">
-          20221016-yokohama-yosakoi
+          20221016-横浜よさこい祭り 2022
         </a>
       </li>
       <li>
         <a class="dropdown-item album-menu" href="#" onclick="switchPath('1eHo-uOU1LTHQKFJhhd8BpMwiF81NTYmk')">
-          20221008-tokyo-yosakoi
+          20221008-原宿表参道元氣祭 スーパーよさこい 2022
         </a>
       </li>
       <li>
         <a class="dropdown-item album-menu" href="#" onclick="switchPath('1yrx_QkJ14QCjcHYYoO1p_8CdZRVOpPPT')">
-          20221009-tokyo-yosakoi
+          20221009-原宿表参道元氣祭 スーパーよさこい 2022
         </a>
       </li>
     </ul>
