--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     // File list: https://developers.google.com/drive/api/v3/reference/files/list
 
     const CLIENT_ID="1015092151085-osb88kjq9jtmve4hv2bisa0ugda4iun0.apps.googleusercontent.com";
-    const API_KEY="AIzaSyC-AjutFl4UADerP1ybHDY3CGvHyUnJKSA";
+    const API_KEY="AIzaSyDZi4pFkXdEKXDyY2y7Ad0t_YVp4O5awHo";
 
     // Discovery doc URL for APIs used by the quickstart
     const DISCOVERY_DOC = 'https://www.googleapis.com/discovery/v1/apis/drive/v3/rest';
@@ -195,7 +195,7 @@
     }
 
     async function onScroll() {
-      if ($(window).scrollTop() + window.innerHeight >= document.body.scrollHeight) {
+      if ($(window).scrollTop() + window.innerHeight >= document.body.scrollHeight - 50) {
         // if ($(window).scrollTop() + $(window).height() == $(document).height()) {
         debugAlert("scrolled to bottom");
         await listFiles();
