--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
 
     const ALBUM_LIST = [
       {
+        id: '1ztSoNGDSXCWS-EKenpzgIRMmq38XQJpv',
+        name: '20221127-東京元気祭り 2022'
+      },
+      {
         id: '1YVu9fL7bqQ4c8CkcyIt93idVnScq-K2x',
         name: '20221113-町田夢舞生ッスイ祭 2022'
       },
