--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
 
     const ALBUM_LIST = [
       {
+        id: '1MZHDWRY1KgcFWgzTxyNEYimz982Llk2U',
+        name: '20221211-サクラタウンよさこい2022～師走祭～'
+      },
+      {
         id: '1ztSoNGDSXCWS-EKenpzgIRMmq38XQJpv',
         name: '20221127-東京元気祭り 2022'
       },
