Move basic operations of Google Drive to external JS file

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <script src="js/env.js"></script>
+  <script src="js/google-drive.js"></script>
 
   <script type="text/javascript">
     window.onerror = function(error) {
@@ -92,18 +93,6 @@
 
   <script type="text/javascript">
     const CACHE_DEBUG_MODE = "debugMode";
-
-    // Quick start: https://developers.google.com/drive/api/quickstart/js
-    // File list: https://developers.google.com/drive/api/v3/reference/files/list
-
-    const CLIENT_ID = "1015092151085-osb88kjq9jtmve4hv2bisa0ugda4iun0.apps.googleusercontent.com";
-    const API_KEY = SPECIFIC_API_KEY || "AIzaSyD6tDosGMgPK33O8K7yWhXbaMvXim121yY";
-
-    // Discovery doc URL for APIs used by the quickstart
-    const DISCOVERY_DOC = 'https://www.googleapis.com/discovery/v1/apis/drive/v3/rest';
-
-    // Authorization scopes required by the API; multiple scopes can be included, separated by spaces.
-    const SCOPES = 'https://www.googleapis.com/auth/drive.metadata.readonly';
 
     // Define the fields to fetch from the API
     // See https://developers.google.com/drive/api/v3/reference/files
@@ -177,9 +166,6 @@
       }
     ];
 
-    let tokenClient;
-    let gapiInited = false;
-    let gisInited = false;
     let currentPaths = []; // [root, sub1, sub2, ...]
     let nextPageToken = ""; // token for loading next page
     let isNoMoreData = false; // true when reach end of the file list
@@ -189,44 +175,7 @@
     let fileMeta = {};
     let fileListContainer = null;
 
-    /**
-     * Callback after api.js is loaded.
-     */
-    function gapiLoaded() {
-      gapi.load('client', initializeGapiClient);
-    }
-
-    /**
-     * Callback after the API client is loaded. Loads the
-     * discovery doc to initialize the API.
-     */
-    async function initializeGapiClient() {
-      await gapi.client.init({
-        apiKey: API_KEY,
-        discoveryDocs: [DISCOVERY_DOC],
-      });
-      gapiInited = true;
-      initUi();
-    }
-
-    /**
-     * Callback after Google Identity Services are loaded.
-     */
-    function gisLoaded() {
-      tokenClient = google.accounts.oauth2.initTokenClient({
-        client_id: CLIENT_ID,
-        scope: SCOPES,
-        callback: '', // defined later
-      });
-      gisInited = true;
-      initUi();
-    }
-
     function initUi() {
-      if (!gapiInited || !gisInited) {
-        return; // not ready
-      }
-
       $('#debugMode').prop(
               'checked',
               localStorage.getItem(CACHE_DEBUG_MODE) === 'true'
@@ -320,41 +269,6 @@
       if ($(window).scrollTop() + window.innerHeight >= document.body.scrollHeight - 50) {
         // if ($(window).scrollTop() + $(window).height() == $(document).height()) {
         await listFiles();
-      }
-    }
-
-    /**
-     *  Sign in the user upon button click.
-     */
-    function switchAccount() {
-      try {
-        signOut();
-
-        tokenClient.callback = async (resp) => {
-          if (resp.error !== undefined) {
-            throw (resp);
-          }
-          await listFiles();
-        };
-
-        if (gapi.client.getToken() === null) {
-          // Prompt the user to select a Google Account and ask for consent to share their data
-          // when establishing a new session.
-          tokenClient.requestAccessToken({prompt: 'consent'});
-        } else {
-          // Skip display of account chooser and consent dialog for an existing session.
-          tokenClient.requestAccessToken({prompt: ''});
-        }
-      } catch (err) {
-        handleError(err);
-      }
-    }
-
-    function signOut() {
-      const token = gapi.client.getToken();
-      if (token !== null) {
-        google.accounts.oauth2.revoke(token.access_token);
-        gapi.client.setToken('');
       }
     }
 
