Move constants for Google Drive operations to external file

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <script src="js/env.js"></script>
+  <script src="js/google-drive-const.js"></script>
   <script src="js/google-drive.js"></script>
 
   <script type="text/javascript">
@@ -93,47 +94,6 @@
 
   <script type="text/javascript">
     const CACHE_DEBUG_MODE = "debugMode";
-
-    // Define the fields to fetch from the API
-    // See https://developers.google.com/drive/api/v3/reference/files
-    const IMAGE_MEDIA_FIELDS = {
-      'width': {},
-      'height': {},
-      'rotation': {},
-      'location': {}, // {"latitude": double, "longitude": double, "altitude": double}
-      'time': {},
-      'cameraMake': {},
-      'cameraModel': {},
-      'exposureTime': {},
-      'aperture': {},
-      'flashUsed': {},
-      'focalLength': {},
-      'isoSpeed': {},
-      'meteringMode': {},
-      'sensor': {},
-      'exposureMode': {},
-      'colorSpace': {},
-      'whiteBalance': {},
-      'exposureBias': {},
-      'maxApertureValue': {},
-      'subjectDistance': {},
-      'lens': {}
-    };
-
-    const FILE_FIELDS = {
-      'id': { hidden: true },
-      'name': {},
-      'mimeType': { hidden: true },
-      'createdTime': {},
-      'modifiedTime': {},
-      'size': {},
-      'hasThumbnail': { hidden: true },
-      'webViewLink': { hidden: true }
-    };
-
-    const FILE_FIELDS_CRITERIA =
-            Object.keys(FILE_FIELDS).join(',')
-            + ',imageMediaMetadata(' + Object.keys(IMAGE_MEDIA_FIELDS).join(',') + ')';
 
     const ALBUM_LIST = [
       {
