Move configuration for albums to external file

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   <script src="js/env.js"></script>
   <script src="js/google-drive-const.js"></script>
   <script src="js/google-drive.js"></script>
+  <script src="js/albums.js"></script>
 
   <script type="text/javascript">
     window.onerror = function(error) {
@@ -94,37 +95,6 @@
 
   <script type="text/javascript">
     const CACHE_DEBUG_MODE = "debugMode";
-
-    const ALBUM_LIST = [
-      {
-        id: '1MZHDWRY1KgcFWgzTxyNEYimz982Llk2U',
-        name: '20221211-サクラタウンよさこい2022～師走祭～'
-      },
-      {
-        id: '1ztSoNGDSXCWS-EKenpzgIRMmq38XQJpv',
-        name: '20221127-東京元気祭り 2022'
-      },
-      {
-        id: '1YVu9fL7bqQ4c8CkcyIt93idVnScq-K2x',
-        name: '20221113-町田夢舞生ッスイ祭 2022'
-      },
-      {
-        id: '1ytzgYQc_SBp-PRTmbwb24PXJ9pWRMHL5',
-        name: '20221015-横浜よさこい祭り 2022'
-      },
-      {
-        id: '1yrIXKE-5XKQOe7_pmLduVFynqpk_z68i',
-        name: '20221016-横浜よさこい祭り 2022'
-      },
-      {
-        id: '1eHo-uOU1LTHQKFJhhd8BpMwiF81NTYmk',
-        name: '20221008-原宿表参道元氣祭 スーパーよさこい 2022'
-      },
-      {
-        id: '1yrx_QkJ14QCjcHYYoO1p_8CdZRVOpPPT',
-        name: '20221009-原宿表参道元氣祭 スーパーよさこい 2022'
-      }
-    ];
 
     let currentPaths = []; // [root, sub1, sub2, ...]
     let nextPageToken = ""; // token for loading next page
