--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
   <style>
+    body {
+      background-image: linear-gradient(to bottom, #f0f0f0, #dcdcdc);
+      background-color: rgba(255, 255, 255, 0.9);
+    }
+
     .modal-content {
       background-color: transparent;
     }
@@ -35,11 +40,22 @@
       font-weight: bolder;
     }
 
+    .modal-content-image {
+      max-width: 100%;
+      max-height: 100vh;
+      margin: auto;
+    }
+
     .source-image-spinner {
       position: absolute;
       text-align: center;
       top: 50%;
       left: 50%;
+    }
+
+    .transparent-button {
+      opacity: 0.5;
+      filter: alpha(opacity=50);
     }
   </style>
 
@@ -108,14 +124,16 @@
     <div class="modal-dialog modal-fullscreen">
       <div class="modal-content" onclick="dismissPhoto()">
         <div class="modal-body d-flex align-items-center justify-content-center">
-          <div>
+          <div class="container">
             <button type="button"
-                    class="btn-close fixed-top fixed-right"
+                    class="btn btn-secondary fixed-top transparent-button"
+                    style="right: auto"
                     data-bs-dismiss="modal" aria-label="Close">
+              X
             </button>
 
-            <img class="img-fluid align-middle align-items-center preview-image" src="" alt=""/>
-            <img class="img-fluid align-middle align-items-center source-image" src="" alt=""
+            <img class="img-fluid align-middle align-items-center preview-image modal-content-image" src="" alt=""/>
+            <img class="img-fluid align-middle align-items-center source-image modal-content-image" src="" alt=""
                  onload="onSourceImageLoaded()"/>
           </div>
           <div class="spinner-border source-image-spinner" role="status">
@@ -123,9 +141,11 @@
           </div>
           <div class="fixed-bottom">
             <a href="" class="download-link" download>
-              <button class="btn btn-light btn-lg"><i class="bi bi-download"></i></button>
+              <button class="btn btn-light btn-lg transparent-button">
+                <i class="bi bi-download"></i>
+              </button>
             </a>
-            <button type="button" class="file-info-btn btn btn-lg btn-light"
+            <button type="button" class="file-info-btn btn btn-lg btn-light transparent-button"
                     data-bs-container="body" data-bs-toggle="popover"
                     data-bs-custom-class="custom-popover"
                     data-bs-title="Info" data-bs-placement="top">
