Add GA but not verified

--- a/index.html
+++ b/index.html
@@ -59,11 +59,23 @@
     }
   </style>
 
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QFKJ9BT7LX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-QFKJ9BT7LX');
+  </script>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <script src="js/env.js"></script>
   <script src="js/google-drive-const.js"></script>
   <script src="js/google-drive.js"></script>
+  <script src="js/google-analytics-util.js"></script>
   <script src="js/albums.js"></script>
   <script src="js/image-focus-util.js"></script>
   <script src="js/google-drive-gallery.js"></script>
