hide button for switching account

--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
       opacity: 0.5;
       filter: alpha(opacity=50);
     }
+
+    #btnSwitchAccount {
+      display: none;
+    }
   </style>
 
 
