--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
   </script>
 </head>
 <body>
-<div class="container position-fixed header" style="max-width: 100%">
-  <div class="dropdown col-4 album-menu">
+<div class="container position-fixed header" style="max-width: 100%; top: 0">
+  <div class="dropdown col-4 album-menu" style="margin: 5px">
     <button id="albumMenuBtn" class="btn btn-secondary dropdown-toggle" type="button"
             data-bs-toggle="dropdown" aria-expanded="false">
       <i class="bi bi-journal-album"></i>
@@ -122,6 +122,7 @@
   <div class="col">
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb align-middle align-items-center">
+        loading <!-- this is for workaround to make content container to have correct margin by the height of this div -->
       </ol>
     </nav>
   </div>
