--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
             data-bs-title="Info" data-bs-placement="bottom"
             data-bs-content="
       This is simple photo/video viewer which loads files from Google Drive.
+      <br/>
+      Anyone can view and download these files for personal use.
+      <br/><br/>
+      BUT! <b>Do NOT</b> use these files anywhere if you are not the person being photographed or their affiliated groups.
       <br/><br/>
       Author: cerberusreijp@gmail.com
     ">
